--- a/style.css
+++ b/style.css
@@ -109,13 +109,29 @@ button[disabled] {
   text-align: center;
   margin-top: 15px;
   margin-bottom: 10px;
-  border: 2px dashed #c2cad4;
+  border: 2px dashed #000000;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
 }
 
-
+@media (max-width: 690px) {
+    .btn {
+      font-size: 1rem;
+      margin: 16px 0px 0px 0px;
+      padding: 10px 15px;
+    }
+  
+    #password {
+      font-size: 1rem;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .btn {
+      font-size: 0.8rem;
+    }
+  }
 
 
 
